<resources>
    <string name="app_name">Worldskill</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- String de el layout  -->

    <string name="tvtipoArtista"> Tipo de Artista</string>
    <string name="rbescritor"> Escritor</string>
    <string name="rbpinto"> Pintor</string>
    <string name="rbescultor"> Escultor</string>
    <string name="etnombre_artista"> Nombre del Artista</string>
    <string name="etbiblio_corta"> Bilbiografia Corta</string>
    <string name="btnregistro"> Registro</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="facebook_app_id">2033000070354657</string>
    <string name="facebook_login_protocol">fb2033000070354657</string>
    <string name="title_activity_maps">Map</string>


</resources>
